fixed overlaping buttons

--- a/styles/desktopview.css
+++ b/styles/desktopview.css
@@ -62,6 +62,7 @@
 
     #section-three .nav-buttons button {
         padding: 0.4rem 5.5rem;
+        width: 30%;
     }
 
     .nav-content {
